# ml_notebooks

./: .gitignore  applied_stats.ipynb  beginner_nn.ipynb  ensemble_techniques.ipynb  fmt.ipynb  pyproject.toml  recommendation_sys.ipynb  requirements.txt  supervised_learning.ipynb  unsupervised_learning.ipynb
