[tool.poetry]
name = "ml_notebooks"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pandas = "1.4.3"
scikit-learn = "1.1.2"
plotly = "5.10.0"
statsmodels = "0.13.2"
numpy = "1.23.3"
scipy = "1.9.1"
matplotlib = "3.6.0"
seaborn = "0.12.0"
xgboost = "1.7.1"
imbalanced-learn = "0.10.1"
tensorflow-cpu = "2.8.4"
opencv-python = "4.7.0.72"
# pip install only in this case
# https://github.com/NicolasHug/Surprise/issues/447
scikit-surprise = "1.1.3"
nltk = "^3.8.1"
holidays = "^0.34"
gensim = "^4.3.2"
spacy = "^3.7.1"
imblearn = "^0.0"


[tool.poetry.dev-dependencies]
nbformat = "5.4.0"
ipykernel = "6.15.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
